# y2k-audit-2022

./: .gitignore  BACKGROUND.md  README.md  ape-config.yaml  insurance-pricing.md  pyproject.toml
audit/: README.md  insurance-pricing.md  oracle-manipulation.md
contracts/: MockStableSwapPool.vy  MockToken.sol
notebook/: insurance-pricing.ipynb  oracle-manipulation.ipynb  oracle.ipynb
scripts/: curve_manipulation.py
scripts/oracle/: curve_manipulation.py
scripts/results/: curve_manipulation.csv
