[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "y2k-audit-2022-11"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = ""
keywords = []
authors = [
  { name = "smolquants", email = "dev@smolquants.xyz" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "eth-ape>=0.5.2<0.6.0",
  "pandas",
  "numpy",
  "matplotlib",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/y2k-audit-2022-11#readme"
Issues = "https://github.com/unknown/y2k-audit-2022-11/issues"
Source = "https://github.com/unknown/y2k-audit-2022-11"

[tool.hatch.version]
path = "__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "black",
  "flake8",
  "isort",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=y2k_audit_2022_11 --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["__about__.py"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
